--- a/erong/pom.xml
+++ b/erong/pom.xml
@@ -10,6 +10,7 @@
 	<packaging>war</packaging>
 	<properties>
 		<spring.version>4.1.6.RELEASE</spring.version>
+		<jackson.version>2.5.1</jackson.version>
 	</properties>
 	<build>
 		<plugins>
@@ -46,6 +47,11 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>4.3.10.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
