--- a/erong/src/main/resources/log4j.properties
+++ b/erong/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@ log4j.rootLogger=DEBUG,CONSOLE2,A2
 log4j.addivity.org.apache=true
 
 log4j.appender.CONSOLE2=org.apache.log4j.ConsoleAppender
-log4j.appender.CONSOLE2.Threshold=DEBUG
+log4j.appender.CONSOLE2.Threshold=INFO
 log4j.appender.CONSOLE2.Target=System.out
 log4j.appender.CONSOLE2.Encoding=GBK
 log4j.appender.CONSOLE2.layout=org.apache.log4j.PatternLayout
