--- a/erong/src/main/webapp/WEB-INF/web.xml
+++ b/erong/src/main/webapp/WEB-INF/web.xml
@@ -2,6 +2,10 @@
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	version="2.5">
+	
+<!-- 	<welcome-file-list>
+		<welcome-file>index</welcome-file>
+	</welcome-file-list> -->
 
 	<context-param>
 		<param-name>webAppRootKey</param-name>
@@ -34,6 +38,10 @@
 		<servlet-name>springServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+<!-- 	<servlet-mapping>
+		<servlet-name>springServlet</servlet-name>
+		<url-pattern>/index</url-pattern>
+	</servlet-mapping> -->
 	<servlet>
 		<servlet-name>DruidStatView</servlet-name>
 		<servlet-class>com.alibaba.druid.support.http.StatViewServlet</servlet-class>
@@ -43,11 +51,8 @@
 		<url-pattern>/druid/*</url-pattern>
 	</servlet-mapping>
 	
-	<welcome-file-list>
-		<welcome-file>/index.html</welcome-file>
-	</welcome-file-list>
-	<error-page>
+	<!-- <error-page>
 		<error-code>404</error-code>
 		<location>/404.html</location>
-	</error-page>
+	</error-page> -->
 </web-app>
