--- a/erong/src/main/webapp/WEB-INF/web.xml
+++ b/erong/src/main/webapp/WEB-INF/web.xml
@@ -3,10 +3,6 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	version="2.5">
 	
-<!-- 	<welcome-file-list>
-		<welcome-file>index</welcome-file>
-	</welcome-file-list> -->
-
 	<context-param>
 		<param-name>webAppRootKey</param-name>
 		<param-value>webapp.root</param-value>
@@ -38,10 +34,6 @@
 		<servlet-name>springServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-<!-- 	<servlet-mapping>
-		<servlet-name>springServlet</servlet-name>
-		<url-pattern>/index</url-pattern>
-	</servlet-mapping> -->
 	<servlet>
 		<servlet-name>DruidStatView</servlet-name>
 		<servlet-class>com.alibaba.druid.support.http.StatViewServlet</servlet-class>
@@ -51,8 +43,8 @@
 		<url-pattern>/druid/*</url-pattern>
 	</servlet-mapping>
 	
-	<!-- <error-page>
+	<error-page>
 		<error-code>404</error-code>
 		<location>/404.html</location>
-	</error-page> -->
+	</error-page>
 </web-app>
