--- a/erong/src/main/webapp/WEB-INF/web.xml
+++ b/erong/src/main/webapp/WEB-INF/web.xml
@@ -21,7 +21,7 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			classpath:spring/spring-security.xml
+			<!-- classpath:spring/spring-security.xml -->
 		</param-value>
 	</context-param>
 	<context-param>
